fix(plugins/plugin-client-common): LeftNav UIs can be too wide
Fixes #6302

--- a/plugins/plugin-client-common/web/scss/components/Navigation/common.scss
+++ b/plugins/plugin-client-common/web/scss/components/Navigation/common.scss
@@ -15,3 +15,12 @@
  */
 
 $nav-width: auto;
+$nav-link-max-width: 20rem;
+
+@mixin NavItemMaxWidth {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: $nav-link-max-width;
+}
